--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8011
 spring:
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   mail:
     host: smtp.gmail.com
     port: 587
@@ -25,6 +29,7 @@ spring:
 mybatis:
   type-aliases-package: com.example.spring.demo.vo 
 custom:
+  genFileDirPath: C:/work/project_test-file
   siteMainUri: http://localhost:8011/
   siteName: BLOG
   emailFrom: no-reply@localhost
